output/facebook/rocksdb/561.txt
I'm following the very nicely written INSTALL instructions for rocksdb (also, kudos on https://github.com/facebook/rocksdb/wiki/RocksDB-Tuning-Guide). 

But I've hit a snag that I just don't understand when trying to Make. I'm running on a new Ubuntu install and was able to install all of the dependencies for the rocksdb fork with no problems (I thought, at least.)

db/table_properties_collector_test.cc:137:15: error: converting to ‘rocksdb::TableProperties::UserCollectedProperties {aka std::unordered_mapstd::basic_string<char, std::basic_string<char> >}’ from initializer list would use explicit constructor ‘std::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::unordered_map(std::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::size_type, const hasher&, const key_equal&, const allocator_type&) [with _Key = std::basic_string<char>; _Tp = std::basic_string<char>; _Hash = std::hashstd::basic_string<char >; _Pred = std::equal_tostd::basic_string<char >; _Alloc = std::allocator<std::pair<const std::basic_string<char>, std::basic_string<char> > >; std::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::size_type = long unsigned int; std::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::hasher = std::hashstd::basic_string<char >; std::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::key_equal = std::equal_tostd::basic_string<char >; std::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::allocator_type = std::allocator<std::pair<const std::basic_string<char>, std::basic_string<char> > >]’
       return {};
               ^
Makefile:391: recipe for target 'db/table_properties_collector_test.o' failed
make: **\* [db/table_properties_collector_test.o] Error 1

